# Numerical-methods-of-linear-algebra

./: README.md
lab1/: CMakeLists.txt  Func_image.cpp  Func_image.h  Matrix.cpp  Matrix.h  main.cpp
lab10/: lab9.py
lab2/: main.py
lab3/: main.py
lab4/: main.py
lab4/layer4/: Gershgorin.py  main.py
lab5/: main.py
lab6/: lab6.py
lab7/: Krylov.py  lab7.py  linalg_methods.py
lab8/: main.py
lab9/: CMakeLists.txt  main.cpp
